cmake_minimum_required(VERSION 3.10)
project(RayTracingProject)
set(CMAKE_CXX_STANDARD 17)
# file(GLOB SRC_H_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src2" */*.h)
# file(GLOB SRC_CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src2" */*.cpp)
# source_group("SOURCES FILES" FILES ${SRC_CPP_FILES})
# source_group("Header FILES" FILES ${SRC_H_FILES})
add_executable(${PROJECT_NAME} src/main.cpp)
